--- a/week03/styles.css
+++ b/week03/styles.css
@@ -8,5 +8,7 @@ body {
   margin: 30px;
   background-image: url("page-bg.gif");
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #F7F3DE;
 
 }
