--- a/week03/styles.css
+++ b/week03/styles.css
@@ -37,5 +37,24 @@ nav ul {
   padding: 0;
   list-style-type: none;
   color: #7C1A00;
-  
+
+}
+
+nav li {
+  margin: 10px;
+  padding: 1px 1px 1px 1px;
+  border-style: solid;
+  border-color; #7C1A00;
+  background-color: #FFE597;
+}
+
+nav a {
+  color: white;
+  background-color: #8C9273;
+  padding: 3px 60px 3px 3px;
+  text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #7C1A00;
 }
