--- a/week03/styles.css
+++ b/week03/styles.css
@@ -77,3 +77,39 @@ footer li {
   padding: 10px;
 
 }
+
+h1 {
+  color: #8C9273;
+
+}
+
+h2 {
+  border-left: 20px solid #8C9273;
+  border-bottom: 5px solid #8C9273;
+  padding-left: 5px;
+
+}
+
+h3 {
+  background-image: url("header-star-1.gif");
+  background-repeat: no-repeat;
+  padding-left: 20px;
+}
+
+blockquote {
+  background-color: #FFE597;
+}
+
+ul {
+  list-style-type: square;
+}
+
+a {
+  color: #7C1A00;
+  font-weight: bold;
+}
+
+a:hover {
+  background-color: #FFE597;
+  
+}
